--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohammed Portfolio</title>
+    <title>My Resume</title>
 </head>
 <body>
-    <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-    <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-    <!-- TODO 4: Add titles/subtitles etc. -->
-    <!-- TODO 5: Add a link to the project pages -->
-    <!-- TODO 6: Add images to show the project previews
-    HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-    https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-    <!-- TODO 7: Add the Contact Me and About Me page links -->
-    <h1>Mohammed.B.Omar Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
-    <hr />
-       
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png" alt="Pic Best movie" height="200"/>
+   <h1>Mohammed Basim</h1>
+   <img src="./assets/images/Mohammed2.jpg" alt="My photo" height="200"/>
+   <h2>Summary</h2>
+   <p>I am a hardworking and dedicated individual with experience in design graphic and programming language, especially Odoo projects through programming working of this filed from Backend.</p>
+   <hr />
+   <h2>Eduction</h2>
+   <ul>
+    <li>Bachelor of Computer science and mathematics, Computer science - University of Tikrit (2012-2016)</li>
+   </ul>
+   <hr />
+   <h2>Work Experience</h2>
+   <ul>
+    <li>Accountant in the Nart Company June 2010 - May 2016 </li>
+    <li>Staff management at Tikrit University 2016-2020.</li>
+    <li>I work teaching in college Computer science. </li>
+    <li>Website management at Tikrit University.</li>
+   </ul>
+   <hr />
+   <h2>Skills</h2>
+   <ul>
+    <li>Design graphic: ⭐️⭐️⭐️⭐️⭐️</li>
+    <li>Microsoft Office Suite: ⭐️⭐️⭐️⭐️</li>
+    <li>Programming: ⭐️⭐️⭐️</li>
+   </ul>
+   <hr />
+   <h2>Other</h2>
+   <ul>
+    <li><a href="./public/Hobbies.html">My Hobbies</a></li>
+    <li><a href="./public/contact.html">My Contact</a></li>
+   </ul>
 
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/Birth.png" alt="Pic cake" height="200"/>
-
-    <hr />
-
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
-     
 </body>
 </html>
-
