--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <style>
+        h1{
+            color: chocolate;
+        }
+    </style>
 </head>
 <body>
    <h1>Mohammed Basim</h1>
